# fuzzy_address_matcher

./: .dockerignore  .gitignore  .nojekyll  Dockerfile  README.md  _quarto.yml  app.py  entrypoint.sh  index.html  index.qmd  pyproject.toml  requirements.txt  requirements_aws.txt  requirements_nnet.txt  robots.txt  search.json  sitemap.xml
.github/scripts/: setup_test_data.py
.github/workflows/: check_file_size.yml  ci.yml  simple-test.yml  sync_to_hf.yml
example_data/: README_fuzzy_address_fixtures.md  reference_addresses_london.csv
fuzzy_address_matcher/: addressbase_api_funcs.py  auth.py  aws_functions.py  config.py  constants.py  custom_csvlogger.py  fuzzy_match.py  gradio_app.py  helper_functions.py  matcher_funcs.py  model_predict.py  preparation.py  recordlinkage_funcs.py
fuzzy_address_matcher/example_data/: reference_addresses_london.csv  search_addresses_london.csv
hf/: README_frontmatter.md
src/: user_guide.html  user_guide.qmd
test/: conftest.py  test_app_entrypoints.py  test_data_fixtures.py  test_extract_street_name.py  test_fuzzy_address_match_fixtures.py  test_integration_match.py  test_postcode_blocker_regression.py  test_preparation_backend_parity.py  test_smoke_match.py  test_standardise_address_regression.py
tools/: addressbase_api_funcs.py  auth.py  aws_functions.py  config.py  constants.py  custom_csvlogger.py  fuzzy_match.py  gradio_app.py  helper_functions.py  matcher_funcs.py  model_predict.py  preparation.py  pytorch_models.py  recordlinkage_funcs.py  secure_path_utils.py  secure_regex_utils.py  standardise.py
